--- a/angular.json
+++ b/angular.json
@@ -21,6 +21,7 @@
                         "assets": ["src/favicon.ico", "src/assets"],
                         "styles": [
                             "src/styles.css",
+                            "./node_modules/bootstrap-icons/font/bootstrap-icons.css",
                             "./node_modules/bootstrap/dist/css/bootstrap.css"
                         ],
                         "scripts": [
