finalized the form functionality; implemented the form array to add multiple drugs to the protocol; need to implement the drug deletion method and template structure

--- a/angular.json
+++ b/angular.json
@@ -85,5 +85,8 @@
                 }
             }
         }
+    },
+    "cli": {
+      "analytics": "45d1d1e1-50cb-43f6-87e7-1aaf48a88c01"
     }
 }
