--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,7 @@
                             "./node_modules/bootstrap/dist/css/bootstrap.css"
                         ],
                         "scripts": [
-                            "./node_modules/bootstrap/dist/js/bootstrap.js",
+                            "./node_modules/bootstrap/dist/js/bootstrap.bundle.js",
                             "./node_modules/chart.js/dist/chart.js"
                         ]
                     },
